feat: session attachment image preview
